# ew-render

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/shaders/: grid.frag  objectPicking.frag  skinnedMesh.vert  unlit.vert
ew/: CMakeLists.txt
ew/ew/: Camera.cpp  Camera.h  FPSCounter.cpp  FPSCounter.h  FlyCamController.cpp  FlyCamController.h  Font.cpp  Font.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TweenManager.h  Vertex.h  animation.cpp  animation.h  animator.cpp  animator.h  camera.cpp  camera.h  ew.h  fpsCounter.cpp  fpsCounter.h  framebuffer.cpp  framebuffer.h  importUtil.h  mesh.cpp  mesh.h  (+13 more)
ew/ew/ewMath/: ewMath.h  mat4.h  quaternion.h  splines.h  transformations.h  vec2.h  vec3.h  vec4.h
examples/assignment1_helloTriangle/: CMakeLists.txt
examples/assignment2_sunset/: CMakeLists.txt  main.cpp
examples/assignment2_sunset/assets/: unlit.frag  unlit.vert
examples/assignment3_textures/: CMakeLists.txt  main.cpp
examples/assignment3_textures/assets/: background.frag  background.vert  character.frag  character.vert  unlit.frag  unlit.vert
examples/assignment4_transformations/: CMakeLists.txt  main.cpp
examples/assignment4_transformations/assets/: unlit.frag  unlit.vert
examples/assignment5_camera/: CMakeLists.txt  main.cpp
examples/assignment6_flyCamera/: CMakeLists.txt  main.cpp
examples/assignment6_flyCamera/assets/: unlit.frag
examples/assignment7_shapeGen/: CMakeLists.txt  main.cpp
examples/assignment7_shapeGen/assets/: unlit.frag  unlit.vert
examples/assignment8_lighting/: CMakeLists.txt  main.cpp
examples/assignment8_lighting/assets/: lit.frag  unlit.frag
examples/camera/: CMakeLists.txt  main.cpp
examples/camera/assets/: unlit.vert
examples/example_spline/: CMakeLists.txt  main.cpp
examples/example_spline/assets/: WormDude.dae  grid.vert  lit.frag  lit.vert  objectPicking.vert  particle.frag  particle.vert  postprocess.frag  postprocess.vert  unlit.frag
examples/example_spline/assets/BossMan/: Jump.dae
examples/helloTriangle/: CMakeLists.txt  main.cpp
examples/helloTriangle/assets/: text.frag  text.vert  unlit.frag  unlit.vert
examples/terrainExample/: CMakeLists.txt  main.cpp
examples/terrainExample/assets/: clouds.frag  clouds.vert  skybox.frag  skybox.vert  terrain.frag  terrain.geom  terrain.tesc  terrain.tese  terrain.vert  terrainSimple.frag  terrainSimple.vert
examples/textExample/: CMakeLists.txt  main.cpp
examples/textExample/assets/: sprite.frag  sprite.vert
examples/texturedQuad/: CMakeLists.txt  main.cpp
examples/texturedQuad/assets/: unlit.frag
examples/transformations/: CMakeLists.txt  main.cpp
examples/transformations/assets/: unlit.frag  unlit.vert
examples/transformations/ewMath/: ewMath.h  mat4.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/: main.cpp
